<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="401dp"
                android:layout_height="283dp"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/motor" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:background="#4D000000"
                android:drawableStart="@android:drawable/ic_menu_gallery"
                android:drawableLeft="@android:drawable/ic_menu_gallery"
                android:drawablePadding="8dp"
                android:padding="8dp"
                android:text="6 Photos"
                android:textColor="@color/white"
                android:textSize="18dp" />
        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/content_price"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/content_text"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:padding="16dp"
                android:text="ukuran cc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/content_text" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="4"
            android:padding="16dp"
            android:text="spec balap"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="275dp"
            android:layout_weight="1"
            android:padding="16dp"
            android:text="@string/content_specs_balap"
            />


           </LinearLayout>
            </LinearLayout>

            </ScrollView>
